2004-05-17  Rodney Dawes  <dobey@ximian.com>

	* storage/Makefile.am (EXTRA_DIST): Remove mail.xpm

2004-05-17  Dan Winship  <danw@novell.com>

	Remove a bunch of 1.4 files that should have been deleted by the
	1.5 import, except that CVS is lame.
	
	* addressbook/pas-backend-ad.[ch]
	* addressbook/pas-backend-exchange.[ch]: Gone

	* calendar/cal-backend-exchange.[ch]
	* calendar/cal-backend-exchange-utils.c
	* calendar/e2k-cache.[ch]
	* calendar/e2k-cal-component.[ch]
	* calendar/e2k-cal-component-todo.c: Gone
	
	* storage/exchange-delegates-control.c: 
	* storage/exchange-delegates-delegates.c: 
	* storage/exchange-delegates-delegators.c:
	* storage/mail.xpm: Gone

	* storage/Makefile.am (evolution_exchange_storage_SOURCES): Sort

2004-05-14  Dan Winship  <danw@novell.com>

	* component/exchange-component.c: Remove backend/backend_component
	split.
	(impl_createControls): Now just calls the backend createControls

	* component/Ximian-Connector.idl: Gone. We can just use
	GNOME::Evolution::Component now.

	* component/Makefile.am: remove IDL stuff

	* storage/xc-backend.c: Merge xc-backend-component.c into this.
	This now implements GNOME::Evolution::Component directly rather
	than Ximian::Connector::Backend
	(impl_createControls): Merge the old createSidebar with the old
	exchange-component.c:impl_createControls.

	* storage/exchange-migrate.c:
	* storage/xc-backend-view.c: Remove some unnecessary #includes of
	things that are no longer there

	* storage/xc-backend-component.[ch]: Gone (merged into xc-backend)

	* storage/Makefile.am: remove IDL stuff, xc-backend-component.[ch]

2004-05-14  Sarfraaz Ahmed <asarfraaz@novell.com>

	Fixes the change password bug#58419

	* storage/exchange-account.c (get_password): Added the code to
        create the kerberos config file, if its not yet created.
        (exchange_account_get_password): Retrives the password stored
        locally.
        (exchange_account_set_password): Updates the server with the new