@@ -181,6 +181,7 @@
 
 
 #define E2K_NS_MAPI_ID			"http://schemas.microsoft.com/mapi/id/"
+#define E2K_NS_MAPI_ID_LEN		(sizeof (E2K_NS_MAPI_ID) - 1)
 
 #define E2K_NS_OUTLOOK_APPOINTMENT	E2K_NS_MAPI_ID "{00062002-0000-0000-C000-000000000046}/"
 
